--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">Help</a></li>
+            <li><a href="mailto:daniel@dentalink.cl">Help</a></li>
           </ul>
         </div>
       </div>
